Added pagination, Token expiration handler, Email confirmation for registration

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Notes Manager",
+  "name": "Notes Manager",
   "icons": [
     {
       "src": "favicon.ico",
@@ -8,14 +8,14 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "logo285.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "285x153"
     },
     {
       "src": "logo512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x274"
     }
   ],
   "start_url": ".",
