--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.0",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.1"
+    "mongoose": "^6.3.1",
+    "nodemailer": "^6.7.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -27,6 +28,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.27",
+    "@types/nodemailer": "^6.4.4",
     "concurrently": "^7.1.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
