--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "cross-env NODE_ENV=production node dist/src/index.js",
     "server": "nodemon --exec ts-node src/index.ts ",
-    "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\" "
+    "client": "npm run start --prefix ../client",
+    "dev": "cross-env NODE_ENV=development concurrently \"npm run server\" \"npm run client\" ",
+    "build": "tsc"
   },
   "author": "Zeleniuc Vladislav <zeleniuc.vladislav@gmail.com>",
   "license": "ISC",
@@ -30,6 +31,7 @@
     "@types/node": "^17.0.27",
     "@types/nodemailer": "^6.4.4",
     "concurrently": "^7.1.0",
+    "cross-env": "^7.0.3",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
